<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">声纹锁</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="s_settingsPreferences">com.nigel.settings</string>
    <string name="s_settingsPasswordKey">com.nigel.password</string>
    <string name="s_settingsSecuity">com.nigel.security</string>
    <string name="s_settingsThreshold">com.nigel.threshold</string>
    <string name="s_settingsFirstRun">com.nigel.firstrun</string>
    <string name="user_manager">用户管理</string>
    <string name="default_time">00:00</string>
    <string name="password">密码</string>
    <string name="username">用户名</string>
    <string name="login">登陆</string>
    <string name="old_password">原密码</string>
    <string name="new_password">新密码</string>
    <string name="password_comfirm">密码确认</string>
    <string name="modify_password">修改密码</string>
    <string name="train">训练</string>
    <string name="config_setting">参数设置</string>
    <string name="threshold">阈值</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="save">保存</string>
    <string name="add_user">添加用户</string>
    <string name="delete_user">删除用户</string>
    <string name="register">注册</string>
    <string name="result_score">得分结果</string>
    <string name="avatar">头像</string>
    <string name="train_content">推荐文本：\n
计算机（computer）俗称电脑，是一种用于高速计算的电子计算机器，可以进行数值计算，又可以进行逻辑计算，还具有存储记忆功能。
是能够按照程序运行，自动、高速处理海量数据的现代化智能电子设备。由硬件系统和软件系统所组成，没有安装任何软件的计算机称为裸机。
可分为超级计算机、工业控制计算机、网络计算机、个人计算机、嵌入式计算机五类，较先进的计算机有生物计算机、光子计算机、量子计算机等。\n
        
计算机是20世纪最先进的科学技术发明之一，对人类的生产活动和社会活动产生了极其重要的影响，并以强大的生命力飞速发展。
它的应用领域从最初的军事科研应用扩展到社会的各个领域，已形成了规模巨大的计算机产业，带动了全球范围的技术进步，由此引发了深刻的社会变革，计算机已遍及一般学校、企事业单位，进入寻常百姓家，成为信息社会中必不可少的工具。
    </string>
    <string name="train_tips">提示：训练时长以30秒到1分钟为宜</string>
    <string name="train_not_start">训练尚未开始</string>
    <string name="test_auth">测试认证</string>
    <string name="welcome">欢迎</string>
    <string name="left_time">30秒</string>
    <string name="not_trained">尚未训练</string>
    <string name="record_30_sec">录制30秒</string>
    <string name="record_10_sec">录制10秒</string>
    <string name="train_new_add">训练新加用户</string>
    <string name="train_all">重新训练所有</string>
    <string name="stop">停止</string>
    <string name="train_one">训练单个用户</string>
    <string name="calculate_all">计算所有得分</string>
    <string name="developer_mode">开发者模式</string>
    <string name="please_input_password">请输入密码</string>
    <string name="numerical_password">转到数字密码模式</string>
    

</resources>
