<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <RelativeLayout
        android:id="@+id/switch_layout"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:visibility="gone" >

	    <Switch
	        android:id="@+id/service_switch"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:text="@string/app_name"
	        android:textOff="开启服务"
	        android:textOn="关闭服务" />
        
    </RelativeLayout>
    
    <Button
        android:id="@+id/btn_modify_passwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/modify_password" />

    <Button
        android:id="@+id/btn_mfcctest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="MfccTest"
        android:visibility="gone" />
    
    <Button 
        android:id="@+id/btn_open_train"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/train"/>

    <Button
        android:id="@+id/btn_config"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/config_setting" />

    <Button
        android:id="@+id/btn_user_manager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_manager"
        android:visibility="gone" />

    <Button
        android:id="@+id/btn_test_auth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/test_auth" />

</LinearLayout>
