<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" >

        <EditText
            android:id="@+id/dev_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:ems="10" >

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/btn_record_30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/dev_username"
            android:text="@string/record_30_sec" />

        <ProgressBar
            android:id="@+id/dev_time_progressbar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/btn_record_30" />

        <TextView
            android:id="@+id/dev_left_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/dev_time_progressbar"
            android:gravity="right"
            android:text="@string/left_time" />

        <Button
            android:id="@+id/dev_btn_train_new_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/dev_left_time"
            android:text="@string/train_new_add" />

        <Button
            android:id="@+id/btn_record_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/dev_time_progressbar"
            android:layout_toRightOf="@+id/btn_record_30"
            android:text="@string/record_10_sec" />

        <Button
            android:id="@+id/dev_btn_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/dev_time_progressbar"
            android:layout_toRightOf="@+id/btn_record_10"
            android:text="@string/stop" />

        <Button
            android:id="@+id/dev_btn_train_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/dev_btn_train_new_add"
            android:layout_alignBottom="@+id/dev_btn_train_new_add"
            android:layout_alignRight="@+id/dev_btn_stop"
            android:text="@string/train_all" />

        <Button
            android:id="@+id/dev_btn_train_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/dev_btn_train_all"
            android:text="@string/train_one" />

        <TextView
            android:id="@+id/dev_select_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/dev_btn_train_one"
            android:layout_alignBottom="@+id/dev_btn_train_one"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@+id/dev_btn_train_one"
            android:text="TextView" />

        <Button
            android:id="@+id/dev_btn_calcul_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/dev_btn_train_one"
            android:text="@string/calculate_all" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/dev_btn_calcul_all"
            android:text="@string/threshold" />

        <TextView
            android:id="@+id/dev_tv_threshold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView3"
            android:layout_alignBottom="@+id/textView3"
            android:layout_toRightOf="@+id/textView3"
            android:text="TextView" />

    </RelativeLayout>

</RelativeLayout>